@@ -40,6 +40,7 @@ lead to a stack overflow.
 
 ** `(srfi srfi-35)' is now visible through `cond-expand'
 ** Fixed type-checking for the second argument of `eval'
+** Fixed type-checking for SRFI-1 `partition'
 ** Fixed `struct-ref' and `struct-set!' on "light structs"
 ** Honor struct field access rights in GOOPS
 ** Changed the storage strategy of source properties, which fixes a deadlock
